fixing spacing

--- a/blogs/blocks/preflight/preflight.css
+++ b/blogs/blocks/preflight/preflight.css
@@ -3,7 +3,7 @@
   height: 600px;
   border: none;
   display: grid;
-  grid-template-rows: 75px 1fr 30px;
+  grid-template-rows: 75px 1fr 75px;
   padding: 0;
 
   --color-green: #4BB543;
@@ -14,6 +14,8 @@
 }
 
 .preflight #preflight-dialog .preflight-footer {
+  display: flex;
+  align-items: center;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
